tests/lexer/fail002.ds.out.expected
./lexer/fail002.ds:1:1: debug: token
 1 | const s = "unterminated string constant
   | ^~~~~
./lexer/fail002.ds:1:7: debug: id: s
 1 | const s = "unterminated string constant
   |       ^
./lexer/fail002.ds:1:9: debug: token
 1 | const s = "unterminated string constant
   |         ^
./lexer/fail002.ds:1:11: warning: unterminated string literal
 1 | const s = "unterminated string constant
   |           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./lexer/fail002.ds:1:11: debug: string: "unterminated string constant"
 1 | const s = "unterminated string constant
   |           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./lexer/fail002.ds:1:40: error: unexpected end of file
 1 | const s = "unterminated string constant
   |                                        ^
./lexer/fail002.ds: info: warnings 1, errors 1
