tests/lexer/fail002.ds
const s = "unterminated string constant